--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@ This bio introduces you and gives a brief overview of your interests and goals. 
 
       <!-- Profile links -->
       <div class="profile-links">
-        <a href="https://www.linkedin.com/in/muhammed-shahil-69743b23b" class="profile-link">LinkedIn</a>
-        <a href="https://github.com/Shahil2003" class="profile-link">GitHub</a>
+        <a href="https://www.linkedin.com/in/muhammed-shahil-69743b23b" class="profile-link"><img src="linkedin.png" height="50" width="50"></a>
+        <a href="https://github.com/Shahil2003" class="profile-link"><img src="github.png" height="50" width="50"</a>
         <a href="#" class="profile-link">Portfolio</a>
       </div>
     </div>
   </body>
 </html>
-
